# knockknock

./: .env.example  .gitignore  README.md  WEB_IMPLEMENTATION_SUMMARY.md  WEB_README.md  activate  config.py  config.yaml  emailer.py  knock_knock.py  pyproject.toml  report.py  requirements-dev.txt  requirements-web.txt  scanner.py  setup.py  setup.sh  storage.py  sudoers-masscan.example  targets.csv.example  test_storage.py
conf/: config.yaml
docker/: Dockerfile.web  Dockerfile.worker  docker-compose.yml
includes/: __init__.py  config.py  nuclei_parser.py  nuclei_runner.py  report.py  scanner.py  storage.py
scripts/: create_admin.py  init_db.py
tests/: conftest.py
tests/test_api/: test_auth.py  test_targets.py
web/: config.py  database.py  main.py
web/api/: analytics.py  health.py  reports.py  scans.py  schedules.py  target_lists.py  targets.py
web/auth/: dependencies.py  router.py  schemas.py  security.py
web/jobs/: celery_app.py  scanner_wrapper.py  scheduler.py  tasks.py
web/models/: __init__.py  artifact.py  scan_run.py  schedule.py  target.py  target_list.py  user.py
web/schemas/: analytics.py  scan.py  schedule.py  target.py  target_list.py
web/ui/static/: index.html
